# pi2mcrl2

./: .gitignore  CMakeLists.txt  README.md
mcrl2/: picalc.mcrl2  picalc.mcrl2proj
src/: main.cpp
src/picalc/: ast.cpp  ast.hpp  cli.cpp  cli.hpp  core.cpp  core.hpp  lexer.cpp  lexer.hpp  mcrl2converter.cpp  mcrl2converter.hpp  parser.cpp  parser.hpp
tests/e2e/: alpha_conversion1.picalc  alpha_conversion2.picalc  basic1.mcrl2  basic1.picalc  comm1.picalc  comm2.picalc  example1.picalc  example2.picalc  name_extrusion1.picalc  name_extrusion2.picalc  recursion1.picalc  recursion2.picalc  recursion3.picalc
